--- a/rapport/rapport-groupe-L.tex
+++ b/rapport/rapport-groupe-L.tex
@@ -42,19 +42,22 @@ First, we need implement a custom routing protocol for sensor networks, similar 
 Lastly, the sensor data 
 \end{comment}
 \section{System Architecture}
-
+The scope of this project covers 
 
 \begin{figure}
   \includegraphics[width=\linewidth]{img/network-diagram-1.jpg}
   \caption{An overview of the system.}
   \label{fig:network1}
 \end{figure}
-\section{Wireless Mesh Network and Routing Protocol}
-One of the objectives of this project is the implementation of a routing protocol, similar to RPL (Routing Protocol for Low-Power and Lossy Networks). A routing protocol is needed in order create a Wireless Mesh Network, and have the information propagate properly from the individual nodes to the root node of the network.\\
+\section{DODAG and Routing Protocol}
+One of the objectives of this project is the implementation of a routing protocol, similar to RPL (Routing Protocol for Low-Power and Lossy Networks). A routing protocol is needed in order create a Destination Oriented Directed Acyclic Graph (DODAG), and have the information propagate properly from any individual node to the root node of the network.\\
 
 Any given node that isn't part of the network should have a way to become a member of the network, and start publishing information. Any node of the network should also be able to disappear without compromising the integrity of the network as long as the node is not a critical junction of two parts of the network graph.
 
 \subsection{Joining a graph}
+When an IoT device is started, it needs to find a network to join. It will therefore broadcast a message asking around for some information about the graph, and wait for the response. This message will be send periodically.\\
+
+When a node that is already part
 \subsection{Leaving a graph}
 
 \subsection{Routing Message Types}
@@ -62,6 +65,7 @@ Any given node that isn't part of the network should have a way to become a memb
 
 
 \section{MQTT infrastructure}
+MQTT stands for Message Queuing Telemetry Transport, and is a publish/subscribe protocol. It requires a MQTT broker as well as MQTT clients that can publish information to the broker, as topics, or subscribe to the broker for a specific topic, in order to be given the required information through time.
 \subsection{MQTT Broker}
 \subsection{MQTT Publishers}
 \subsection{MQTT Subscribers}
