--- a/rapport/rapport-groupe-L.tex
+++ b/rapport/rapport-groupe-L.tex
@@ -41,12 +41,12 @@ First, we need implement a custom routing protocol for sensor networks, similar 
 \\
 Lastly, the sensor data 
 \end{comment}
-\section{System Architecture}
-The scope of this project covers three separate part :
+\section{Overview of the System}
+The scope of this project covers three separate part (see figure \ref{fig:architecture1}):
 \begin{itemize}
-\item{A IoT sensor network}
-\item{A MQTT publish/subscribe infrastructure}
-\item{A Rime-MQTT Gateway which interfaces the sensor network with the MQTT infrastructure}
+\item{An IoT sensor network, where devices organize themselves, and communicate with each other by using a custom routing protocol similar to RPL.}
+\item{A MQTT publish/subscribe infrastructure composed of a MQTT broker and several MQTT client that can either publish data and subscribe to topics to receive data.}
+\item{A Rime-MQTT Gateway which interfaces the sensor network with the MQTT infrastructure in order for the IoT network and MQTT infrastructure to talk to each other in a transparent manner.}
 \end{itemize}
 
 \begin{figure}
@@ -57,16 +57,18 @@ The scope of this project covers three separate part :
 \section{DODAG and Routing Protocol}
 One of the objectives of this project is the implementation of a routing protocol, similar to RPL (Routing Protocol for Low-Power and Lossy Networks). A routing protocol is needed in order create a Destination Oriented Directed Acyclic Graph (DODAG), and have the information propagate properly from any individual node to the root node of the network.\\
 
-Any given node that isn't part of the network should have a way to become a member of the network, and start publishing information. Any node of the network should also be able to disappear without compromising the integrity of the network as long as the node is not a critical junction of two parts of the network graph.
+Any given node that isn't part of the network should have the posibility to become one, and start publishing information. Any node of the network should also be able to disappear without compromising the integrity of the network as long as the node is not a critical junction of two parts of the network graph.
 
 \subsection{Joining a graph}
-When an IoT device is started, it needs to find a network to join. It will therefore use a \textit{Discovery message} to broadcast its existence, ask around for some information about the DODAG, and wait for the response. This \textit{Discovery message} will be send periodically.\\
+When an IoT device is started, it needs to find a network to join. It will therefore use a \textit{Discovery message} to broadcast its existence, ask around for some information about the DODAG, and wait for the response. This \textit{Discovery message} will be send periodically based on a timer.\\
 
-When a node that is already part
+When a node that is already a member of the DODAG receives this broadcasted message, it replies with a unicast \textit{Parent Message}, advertising itself as a possible parent. When the node that is trying to join the network receives a \textit{Parent Message}, it saves the address of the parent and sends a unicast \textit{Parent-ACK message} to the parent, to confirm their child-parent relationship. The parent then adds the child to the list of its children.
 
-\subsection{Leaving a graph}
+\subsection{Leaving a graph TODO}
 When a node disappears from the DODAG...
 
+\subsection{Sending Sensor Data}
+Periodically, each node uses a \textit{ROOT message} to send data to the root node of the DODAG, , which will then forward it to the Gateway, where it will be translated into a MQTT message that will be sent to the MQTT broker. Once it reaches the MQTT broker, the message is forwarded to all the MQTT client that have subscribed to the specific topic relative to that message.
 
 \subsection{Summary of Routing Message Types}
 \subsubsection{Discovery Message}
@@ -75,25 +77,15 @@ When a node has doesn't belong to the network, it will try sending a broadcast r
 \subsubsection{Parent Message}
 A \textit{Parent Message} is sent by a member of the network after receiving a Discovery message. This message advertises the parent's address as well as rank within the network.
 
-\subsubsection{ACK Message}
-When a node who isn't part of the network receives a \textit{Parent message}, it can decide to set the sender of the \textit{Parent message} as its own parent. When the child node decides to add a parent, it sends unicast \textit{ACK message} to the parent, to inform it that it has a new child. Afterwards, the child node is officially part of the network.
+\subsubsection{ACK-Parent}
+When a node which isn't part of the network receives a \textit{Parent message}, it can decide to set the sender of the \textit{Parent message} as its own parent.it then sends a unicast \textit{ACK-Parent message} to the parent, to inform it that it has a new child. After sending this \textit{ACK-Parent message}, the child node officially becomes part of the network.
+\subsubsection{ACK-Info Message}
 
 \subsubsection{Information Message}
 Periodically, each node sends takes information from it's sensors and sends it to its parent. To do this, an \textit{Information message} is used.
 
+\subsubsection{Root Message}
 
-
-
-\begin{comment}
-Si je comprend :
-1) Nouveau node arrive : Discovery message (broadcast)
-2) Parents potentiel répondent : VADOR message
-3) Le noeud choisi un parent et envoi : ACK_PARENT (unicast)
-
-Et pendant leur fonctionnement, les différents noeuds envoient périodiquement des requête INFO  contenant les relevés des senseurs
-gg - Aujourd'hui à 20:42
-yup et 4) parent ajoute fils à une liste de ses enfants pour pouvoir leur broadcast les configs
-\end{comment}
 
 
 \section{MQTT infrastructure}
@@ -140,7 +132,7 @@ The Gateway also subscribes to the  topic, in order to be warned when
   \label{fig:communication1}
 \end{figure}
 
-\subsection{Wireless Sensor Network Configuration}
-
+\subsection{Sensor Network Configuration}
+One of the requirement of this project is the possibility to dynamically modify the configuration of the sensor network. The proposed method was to by directly interacting with 
 \end{document}
 
