[mod] reached compilation point with rom1 addition and a small change in the report

--- a/rapport/rapport-groupe-L.tex
+++ b/rapport/rapport-groupe-L.tex
@@ -24,7 +24,7 @@
 \newpage
 
 \section{Introduction}
-When using sensors to measure data, such as light, temperature or noise, it is common to use a IoT device: a small battery-powered piece of hardware, equipped with one or several sensors, that can communicate data wirelessly.\\
+When using sensors to measure data, such as light, temperature or noise, it is common to use IoT devices: a small battery-powered piece of hardware, equipped with one or several sensors, that can communicate data wirelessly.\\
 
 The way to propagate information is by communicating with neighbouring devices, which will forward the information towards a specific node of the network, called the \textit{root node}. To be able to communicate in this manner, each device must form a relationship with the other nodes and form what is called a Wireless Mesh Network (WMN).\\
 
@@ -42,7 +42,7 @@ First, we need implement a custom routing protocol for sensor networks, similar 
 Lastly, the sensor data 
 \end{comment}
 \section{Overview of the System}
-The scope of this project covers three separate part (see figure \ref{fig:architecture1}):
+The scope of this project covers three separate parts (see figure \ref{fig:architecture1}):
 \begin{itemize}
 \item{An IoT sensor network, where devices organize themselves, and communicate with each other by using a custom routing protocol similar to RPL.}
 \item{A MQTT publish/subscribe infrastructure composed of a MQTT broker and several MQTT client that can either publish data and subscribe to topics to receive data.}
